--- a/lab1/rmarkdown_practice.html
+++ b/lab1/rmarkdown_practice.html
@@ -361,6 +361,8 @@ display: none;
 <h3>Title</h3>
 <div id="title-2" class="section level4">
 <h4>Title</h4>
+<p>The fat cat crossed<br />
+the road.</p>
 <p><a href="https://jmledford3115.github.io/datascibiol/">BIS 15L
 Webpage</a></p>
 <p><a href="jmledford@ucdavis.edu">Joel Ledford</a></p>
