--- a/lab1/lab1_hw.html
+++ b/lab1/lab1_hw.html
@@ -415,10 +415,12 @@ each one in a separate code chunk.</strong></p>
 <p><strong>5. Did any of the results in #4 surprise you? Write two
 programs that calculate each expression such that the result for the
 first example is 4 and the second example is 16.</strong></p>
+<p>The first example did surprise me a little bit because it didn’t
+calculate using the correct order of operations.</p>
 <pre class="r"><code>(5 - 3) * 2  </code></pre>
 <pre><code>## [1] 4</code></pre>
-<pre class="r"><code>8 / 2 * 2 </code></pre>
-<pre><code>## [1] 8</code></pre>
+<pre class="r"><code>8 / (2 * 2) * 8</code></pre>
+<pre><code>## [1] 16</code></pre>
 <p><strong>6. <code>Objects</code> in R are a way in which we can store
 data or operations. We will talk more about objects next week. For now,
 make a new object <code>pi</code> as 3.14159265359 by running the
@@ -434,6 +436,7 @@ that performs this operation using the object we created.</strong></p>
 <code>?</code> in front the command of interest. Practice this by
 running the following code chunk.</strong></p>
 <pre class="r"><code>?mean</code></pre>
+<pre><code>## starting httpd help server ... done</code></pre>
 <p><strong>9. Let’s calculate the mean for the numbers 2, 8, 6, 4, 9,
 10. I have built an object <code>x</code> for you below so all you need
 to do is run the first code chunk and then create a second code chunk
