--- a/lab7/lab7_hw.html
+++ b/lab7/lab7_hw.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Carmen Doria" />
 
-<meta name="date" content="2024-02-01" />
+<meta name="date" content="2024-02-04" />
 
 <title>Lab 7 Homework</title>
 
@@ -376,7 +376,7 @@ display: none;
 
 <h1 class="title toc-ignore">Lab 7 Homework</h1>
 <h4 class="author">Carmen Doria</h4>
-<h4 class="date">2024-02-01</h4>
+<h4 class="date">2024-02-04</h4>
 
 </div>
 
@@ -624,74 +624,57 @@ between the years 1990-2000? Morocco caught the most sardines.</li>
 ## # ℹ 257 more rows</code></pre>
 <ol start="8" style="list-style-type: decimal">
 <li>Which five countries caught the most cephalopods between 2008-2012?
-India, China, Italy, Spain, and Algeria.</li>
+Indonesia, China, Chile, USA, Japan.</li>
 </ol>
+<pre class="r"><code>names(fisheries_tidy)</code></pre>
+<pre><code>##  [1] &quot;country&quot;                 &quot;common_name&quot;            
+##  [3] &quot;isscaap_group_number&quot;    &quot;isscaap_taxonomic_group&quot;
+##  [5] &quot;asfis_species_number&quot;    &quot;asfis_species_name&quot;     
+##  [7] &quot;fao_major_fishing_area&quot;  &quot;measure&quot;                
+##  [9] &quot;year&quot;                    &quot;catch&quot;</code></pre>
 <pre class="r"><code>fisheries_tidy %&gt;%
-  filter(asfis_species_name == &quot;Cephalopoda&quot; &amp; between(year, 2008, 2012)) %&gt;% 
-  group_by(country) %&gt;% 
-  summarise(max_cephalopods = max(catch, na.rm = T)) %&gt;% 
-  arrange(desc(max_cephalopods))</code></pre>
-<pre><code>## Warning in grepl(&quot;,&quot;, levels(x), fixed = TRUE): input string 1 is invalid UTF-8</code></pre>
-<pre><code>## Warning in grepl(&quot;,&quot;, levels(x), fixed = TRUE): input string 2 is invalid UTF-8</code></pre>
-<pre><code>## Warning in grepl(&quot;,&quot;, levels(x), fixed = TRUE): input string 3 is invalid UTF-8</code></pre>
-<pre><code>## Warning in grepl(&quot;,&quot;, levels(x), fixed = TRUE): input string 4 is invalid UTF-8</code></pre>
-<pre><code>## Warning: There were 2 warnings in `summarise()`.
-## The first warning was:
-## ℹ In argument: `max_cephalopods = max(catch, na.rm = T)`.
-## ℹ In group 7: `country = &quot;Israel&quot;`.
-## Caused by warning in `max()`:
-## ! no non-missing arguments to max; returning -Inf
-## ℹ Run `dplyr::last_dplyr_warnings()` to see the 1 remaining warning.</code></pre>
-<pre><code>## # A tibble: 16 × 2
-##    country                  max_cephalopods
-##    &lt;fct&gt;                              &lt;dbl&gt;
-##  1 India                                 94
-##  2 China                                 86
-##  3 Italy                                 66
-##  4 Spain                                 57
-##  5 Algeria                               54
-##  6 Mauritania                            44
-##  7 France                                39
-##  8 TimorLeste                            16
-##  9 Taiwan Province of China              11
-## 10 Mozambique                             8
-## 11 Cambodia                               6
-## 12 Madagascar                             6
-## 13 Croatia                                4
-## 14 Viet Nam                               0
-## 15 Israel                              -Inf
-## 16 Somalia                             -Inf</code></pre>
+  select(country, isscaap_taxonomic_group, year, catch) %&gt;% 
+  filter(isscaap_taxonomic_group == &quot;Squids, cuttlefishes, octopuses&quot;) %&gt;% 
+  filter(between(year, 2008, 2012)) %&gt;% 
+  arrange(desc(catch))</code></pre>
+<pre><code>## # A tibble: 1,801 × 4
+##    country                  isscaap_taxonomic_group          year catch
+##    &lt;fct&gt;                    &lt;chr&gt;                           &lt;dbl&gt; &lt;dbl&gt;
+##  1 Indonesia                Squids, cuttlefishes, octopuses  2012   991
+##  2 China                    Squids, cuttlefishes, octopuses  2008   981
+##  3 Chile                    Squids, cuttlefishes, octopuses  2012   965
+##  4 United States of America Squids, cuttlefishes, octopuses  2010   901
+##  5 China                    Squids, cuttlefishes, octopuses  2012   845
+##  6 Japan                    Squids, cuttlefishes, octopuses  2010   832
+##  7 China                    Squids, cuttlefishes, octopuses  2010   826
+##  8 Peru                     Squids, cuttlefishes, octopuses  2010   822
+##  9 Korea, Republic of       Squids, cuttlefishes, octopuses  2008   816
+## 10 Peru                     Squids, cuttlefishes, octopuses  2009   805
+## # ℹ 1,791 more rows</code></pre>
 <ol start="9" style="list-style-type: decimal">
 <li>Which species had the highest catch total between 2008-2012? (hint:
-Osteichthyes is not a species) Marine fishes nei had the highest catch
-total between 2008 and 2012.</li>
+Osteichthyes is not a species) Theragra chalcogramma had the highest
+catch total between 2008 and 2012.</li>
 </ol>
 <pre class="r"><code>fisheries_tidy %&gt;%
-  filter(between(year, 2008, 2012)) %&gt;% 
-  group_by(common_name) %&gt;% 
-  summarise(max_species_catch = max(catch, na.rm = T)) %&gt;% 
+  filter(asfis_species_name != &quot;Osteichthyes&quot;, between(year, 2008, 2012)) %&gt;% 
+  group_by(asfis_species_name) %&gt;% 
+  summarise(max_species_catch = sum(catch, na.rm = T)) %&gt;% 
   arrange(desc(max_species_catch))</code></pre>
-<pre><code>## Warning: There were 119 warnings in `summarise()`.
-## The first warning was:
-## ℹ In argument: `max_species_catch = max(catch, na.rm = T)`.
-## ℹ In group 37: `common_name = &quot;Angulate volute&quot;`.
-## Caused by warning in `max()`:
-## ! no non-missing arguments to max; returning -Inf
-## ℹ Run `dplyr::last_dplyr_warnings()` to see the 118 remaining warnings.</code></pre>
-<pre><code>## # A tibble: 1,477 × 2
-##    common_name                    max_species_catch
-##    &lt;chr&gt;                                      &lt;dbl&gt;
-##  1 Marine fishes nei                           9806
-##  2 Largehead hairtail                          8221
-##  3 Alaska pollock(=Walleye poll.)              8188
-##  4 Anchoveta(=Peruvian anchovy)                7981
-##  5 Atlantic herring                            7873
-##  6 Skipjack tuna                                997
-##  7 Blue whiting(=Poutassou)                     996
-##  8 Scads nei                                    994
-##  9 Yellowstripe scad                            993
-## 10 Common squids nei                            991
-## # ℹ 1,467 more rows</code></pre>
+<pre><code>## # A tibble: 1,471 × 2
+##    asfis_species_name    max_species_catch
+##    &lt;chr&gt;                             &lt;dbl&gt;
+##  1 Theragra chalcogramma             41075
+##  2 Engraulis ringens                 35523
+##  3 Katsuwonus pelamis                32153
+##  4 Trichiurus lepturus               30400
+##  5 Clupea harengus                   28527
+##  6 Thunnus albacares                 20119
+##  7 Scomber japonicus                 14723
+##  8 Gadus morhua                      13253
+##  9 Thunnus alalunga                  12019
+## 10 Natantia                          11984
+## # ℹ 1,461 more rows</code></pre>
 <ol start="10" style="list-style-type: decimal">
 <li>Use the data to do at least one analysis of your choice. What was
 the mean amount of sardines caught in 1999? The mean sardine catch was
