--- a/lab7/lab7_hw.html
+++ b/lab7/lab7_hw.html
@@ -624,7 +624,7 @@ between the years 1990-2000? Morocco caught the most sardines.</li>
 ## # ℹ 257 more rows</code></pre>
 <ol start="8" style="list-style-type: decimal">
 <li>Which five countries caught the most cephalopods between 2008-2012?
-Indonesia, China, Chile, USA, Japan.</li>
+India, China, Spain, ALgeria and France</li>
 </ol>
 <pre class="r"><code>names(fisheries_tidy)</code></pre>
 <pre><code>##  [1] &quot;country&quot;                 &quot;common_name&quot;            
@@ -632,25 +632,31 @@ Indonesia, China, Chile, USA, Japan.</li>
 ##  [5] &quot;asfis_species_number&quot;    &quot;asfis_species_name&quot;     
 ##  [7] &quot;fao_major_fishing_area&quot;  &quot;measure&quot;                
 ##  [9] &quot;year&quot;                    &quot;catch&quot;</code></pre>
-<pre class="r"><code>fisheries_tidy %&gt;%
-  select(country, isscaap_taxonomic_group, year, catch) %&gt;% 
-  filter(isscaap_taxonomic_group == &quot;Squids, cuttlefishes, octopuses&quot;) %&gt;% 
-  filter(between(year, 2008, 2012)) %&gt;% 
-  arrange(desc(catch))</code></pre>
-<pre><code>## # A tibble: 1,801 × 4
-##    country                  isscaap_taxonomic_group          year catch
-##    &lt;fct&gt;                    &lt;chr&gt;                           &lt;dbl&gt; &lt;dbl&gt;
-##  1 Indonesia                Squids, cuttlefishes, octopuses  2012   991
-##  2 China                    Squids, cuttlefishes, octopuses  2008   981
-##  3 Chile                    Squids, cuttlefishes, octopuses  2012   965
-##  4 United States of America Squids, cuttlefishes, octopuses  2010   901
-##  5 China                    Squids, cuttlefishes, octopuses  2012   845
-##  6 Japan                    Squids, cuttlefishes, octopuses  2010   832
-##  7 China                    Squids, cuttlefishes, octopuses  2010   826
-##  8 Peru                     Squids, cuttlefishes, octopuses  2010   822
-##  9 Korea, Republic of       Squids, cuttlefishes, octopuses  2008   816
-## 10 Peru                     Squids, cuttlefishes, octopuses  2009   805
-## # ℹ 1,791 more rows</code></pre>
+<pre class="r"><code>fisheries_tidy %&gt;% 
+  filter(between(year,2008,2012)) %&gt;% 
+  filter(common_name == &quot;Cephalopods nei&quot;) %&gt;% 
+  group_by(country) %&gt;% 
+  summarize(sum_catch=sum(catch,na.rm=T)) %&gt;% 
+  arrange(desc(sum_catch))</code></pre>
+<pre><code>## # A tibble: 16 × 2
+##    country                  sum_catch
+##    &lt;fct&gt;                        &lt;dbl&gt;
+##  1 India                          570
+##  2 China                          257
+##  3 Spain                          198
+##  4 Algeria                        162
+##  5 France                         101
+##  6 Mauritania                      90
+##  7 TimorLeste                      76
+##  8 Italy                           66
+##  9 Mozambique                      16
+## 10 Cambodia                        15
+## 11 Taiwan Province of China        13
+## 12 Madagascar                      11
+## 13 Croatia                          7
+## 14 Israel                           0
+## 15 Somalia                          0
+## 16 Viet Nam                         0</code></pre>
 <ol start="9" style="list-style-type: decimal">
 <li>Which species had the highest catch total between 2008-2012? (hint:
 Osteichthyes is not a species) Theragra chalcogramma had the highest
