--- a/homework/hw7.html
+++ b/homework/hw7.html
@@ -9,9 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Your Name Here" />
+<meta name="author" content="Carmen Doria" />
 
-<meta name="date" content="2024-02-10" />
+<meta name="date" content="2024-02-12" />
 
 <title>Homework 7</title>
 
@@ -375,8 +375,8 @@ display: none;
 
 
 <h1 class="title toc-ignore">Homework 7</h1>
-<h4 class="author">Your Name Here</h4>
-<h4 class="date">2024-02-10</h4>
+<h4 class="author">Carmen Doria</h4>
+<h4 class="date">2024-02-12</h4>
 
 </div>
 
@@ -599,43 +599,25 @@ that this function can find but they are represented in this data set as
 <p><strong>5. Make any necessary replacements in the data such that all
 NA’s appear as “NA”.</strong></p>
 <pre class="r"><code>amniota_tidy &lt;- amniota %&gt;% 
-  replace_with_na(replace = list(litters_or_clutches_per_y = -999, 
-                                 no_sex_maturity_d = -999, 
-                                 no_sex_svl_cm = -999, 
-                                 female_body_mass_at_maturity_g= -999, 
-                                 birth_or_hatching_svl_cm= -999, 
-                                 female_svl_cm = -999, 
-                                 male_svl_cm= -999, 
-                                 adult_svl_cm= -999,
-                                fledging_mass_g = -999, 
-                                 egg_length_mm = -999, 
-                                 egg_width_mm  = -999, 
-                                 no_sex_body_mass_g = -999, 
-                                 inter_litter_or_interbirth_interval_y = -999, 
-                                  male_maturity_d= -999, 
-                                 longevity_y = -999, 
-                                 fledging_age_d= -999,
-                                  incubation_d = -999, 
-                                 egg_mass_g = -999, 
-                                 weaning_weight_g = -999, 
-                                birth_or_hatching_weight_g  = -999, 
-                                weaning_d= -999, 
-                                gestation_d= -999, 
-                                 maximum_longevity_y = -999, 
-                                litter_or_clutch_size_n = -999,
-                                subspecies = -999,
-                                female_maturity_d= -999)) %&gt;% 
-miss_var_summary()</code></pre>
+  replace_with_na_all(condition = ~.x == -999)</code></pre>
 <p><strong>6. Use the package <code>naniar</code> to produce a summary,
 including percentages, of missing data in each column for the
 <code>amniota</code> data.</strong></p>
 <pre class="r"><code>naniar::miss_var_summary(amniota_tidy)</code></pre>
-<pre><code>## # A tibble: 3 × 3
-##   variable n_miss pct_miss
-##   &lt;chr&gt;     &lt;int&gt;    &lt;dbl&gt;
-## 1 variable      0        0
-## 2 n_miss        0        0
-## 3 pct_miss      0        0</code></pre>
+<pre><code>## # A tibble: 36 × 3
+##    variable                       n_miss pct_miss
+##    &lt;chr&gt;                           &lt;int&gt;    &lt;dbl&gt;
+##  1 subspecies                      21322    100  
+##  2 female_body_mass_at_maturity_g  21318    100. 
+##  3 female_svl_at_maturity_cm       21120     99.1
+##  4 fledging_mass_g                 21111     99.0
+##  5 male_svl_cm                     21040     98.7
+##  6 no_sex_maturity_d               20860     97.8
+##  7 egg_width_mm                    20727     97.2
+##  8 egg_length_mm                   20702     97.1
+##  9 weaning_weight_g                20258     95.0
+## 10 female_svl_cm                   20242     94.9
+## # ℹ 26 more rows</code></pre>
 <p><strong>7. Use the package <code>naniar</code> to produce a summary,
 including percentages, of missing data in each column for the
 <code>amphibio</code> data.</strong></p>
@@ -659,7 +641,7 @@ NAs in the <code>egg_mass_g</code> column sorted by taxonomic class;
 i.e. how many NA’s are present in the <code>egg_mass_g</code> column in
 birds, mammals, and reptiles? Does this results make sense biologically?
 How do these results affect your interpretation of NA’s?</strong></p>
-<pre class="r"><code>amniota_egg_mass &lt;- amniota %&gt;% 
+<pre class="r"><code>amniota_egg_mass &lt;- amniota_tidy %&gt;% 
   select(class, egg_mass_g) %&gt;% 
   group_by(class) %&gt;% 
   summarise_all(~sum(is.na(.)))</code></pre>
